--- a/recipe-page-main/index.html
+++ b/recipe-page-main/index.html
@@ -10,7 +10,7 @@
   <title>Frontend Mentor | Recipe page</title>
 
  
-<link rel="stylesheet" href="./index.css"/>
+<link rel="stylesheet" href="./Recipe.css"/>
 </head>
 <body>
 
